# WarGame

./: Board.cpp  Board.hpp  CMakeLists.txt  DemoGame.hpp  FootCommander.cpp  FootCommander.hpp  FootSoldier.cpp  FootSoldier.hpp  Makefile  Paramedic.cpp  Paramedic.hpp  ParamedicCommander.cpp  ParamedicCommander.hpp  Sniper.cpp  Sniper.hpp  SniperCommander.cpp  SniperCommander.hpp  Soldier.cpp  Soldier.hpp  TestCounter.cpp  Test_Oz.cpp  Test_amichai.cpp  Test_oriane_yirat.cpp
